Feature/date time picker (#181)
* feat: init

* feat: lockfile

* feat: general leayout, partial styles for header

* feat: most of the layout done, header days missing

* feat: basic layout done

* feat: add popper placement

* feat: add basic test suite and fix icon disabled state

* refactor: cleanup stories and props

* refactor: break into smaller components

* refactor: to Calendar components

* feat: basic render of time input

* fix: timeinput layout

* fix: styles tuneup for datepoints list

* fix: storybook for ie11

* feat: wip

* feat: timefield scaffold with focus

* feat: modifier states

* feat: custom time components works

* feat: datePoint buttons working

* feat: add utils tests

* fix: failing tests

* fix: picker times

* feat: calendar components cleanup

* feat: add CalendarTime tests

* feat: add calendar header tests

* feat: add CalendarInput tests

* feat: add calendar range tests

* fix: failing calendar range tests

* feat: cleanup styles

* feat: typo

* feat: wire calendar input onChange event

* feat: resolve time input

* feat: roll back storybook changes

* feat: add TimeFieldFormik wrapper

* feat: add timefield tests

* feat: resolve leftover todos

* feat: remove todo lsit

* fix: 6 weeks overflow

* feat: tweak min-width

* revert: colors change

* chore: regenerate package-lock

* feat: change error label

* refactor: calc ignore

* fix: failing tests

* Update package.json

* Add screenshots

* Fix screenshots

* fix: visuals

Co-authored-by: Andrey Goncharov <andrey@goncharov.page>

--- a/packages/ui/styles/helpers/_a11y.scss
+++ b/packages/ui/styles/helpers/_a11y.scss
@@ -7,8 +7,7 @@
 @mixin outlineFormField {
   border-color: c.$colorAccessibilityOutline;
   // Border is also colored with the a11y color. We need to make the total visible outline width c.$outlineWidth, including the border
-  box-shadow: inset 0 0 0 (c.$outlineWidth - c.$borderWidth)
-    c.$colorAccessibilityOutline;
+  box-shadow: inset 0 0 0 (c.$outlineWidth - c.$borderWidth) c.$colorAccessibilityOutline;
 
   // Do not remove outline for high-contrast modes
   // https://stackoverflow.com/a/52616313
