--- a/packages/ui/__stories__/utils.scss
+++ b/packages/ui/__stories__/utils.scss
@@ -28,3 +28,14 @@
 .toggles > *:not(:last-child) {
   margin-bottom: c.$grid * 3;
 }
+
+.calendarWrapper {
+  width: 100%;
+  height: 400px;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
