--- a/packages/ui/src/TextField.module.scss
+++ b/packages/ui/src/TextField.module.scss
@@ -38,6 +38,24 @@ $marginLeftWithIcon: c.$grid * 5;
     border-radius: c.$borderRadius;
   }
 
+  .inputIcon,
+  .inputIconTrailing {
+    pointer-events: none;
+    position: absolute;
+    top: 50%;
+    // c.$grid * 9 / 2 is half of the padding. We need to shift it to the left just a bit to account for the border width
+    transform: translate(-50%, -50%) translateX(c.$outlineWidth);
+  }
+
+  .inputIcon {
+    left: ($marginLeftWithIcon + $inputHorizontalPadding) / 2;
+  }
+
+  .inputIconTrailing {
+    right: -(c.$grid);
+    color: c.$colorPrimary;
+  }
+
   // Here we go. Another border hack. Why?
   // TextField is re-used for PasswordField. PasswordField is meant for passwords.
   // Passwords are often handled by password managers. Password managers often add their own UI on top of the password inputs.
@@ -61,14 +79,6 @@ $marginLeftWithIcon: c.$grid * 5;
     box-sizing: border-box;
   }
 
-  .inputIcon {
-    position: absolute;
-    top: 50%;
-    // c.$grid * 9 / 2 is half of the padding. We need to shift it to the left just a bit to account for the border width
-    transform: translate(-50%, -50%) translateX(c.$outlineWidth);
-    left: ($marginLeftWithIcon + $inputHorizontalPadding) / 2;
-  }
-
   input {
     display: block;
     flex: 1 1 auto;
@@ -86,6 +96,10 @@ $marginLeftWithIcon: c.$grid * 5;
 
     &::placeholder {
       color: c.$colorTextSecondary;
+    }
+
+    &.trailingIcon {
+      padding-right: c.$grid * 8;
     }
   }
 
@@ -158,6 +172,9 @@ $marginLeftWithIcon: c.$grid * 5;
         border-color: c.$colorNeutralLight;
       }
       & ~ .inputIconContainer > .inputIcon {
+        color: c.$colorTextSecondary;
+      }
+      & ~ .inputIconContainer > .inputIconTrailing {
         color: c.$colorTextSecondary;
       }
     }
