feat: add Overlay component

--- a/packages/ui/styles/constants/_colors.scss
+++ b/packages/ui/styles/constants/_colors.scss
@@ -27,6 +27,8 @@ $colorErrorDark: #891b15 !default;
 $colorText: #041a3b !default;
 $colorTextSecondary: #707482 !default;
 
+$colorOverlayBackground: #f2f5f9 !default;
+
 $colorAccessibilityOutline: #9648bd !default;
 
 $colorShadow: rgba(53, 61, 73, 0.2) !default;
