--- a/packages/ui/styles/constants/_sizes.scss
+++ b/packages/ui/styles/constants/_sizes.scss
@@ -47,6 +47,9 @@ $cardShadowBlur: 4px !default;
 $selectMenuShadowSize: 1px !default;
 $selectMenuShadowBlur: 4px !default;
 
+//Overlay
+$overlayContentMaxWidth: 1000px;
+
 // Modal
 $modalWidth: 75%;
 $modalMinWidth: 480px !default;
