--- a/packages/ui/styles/constants/_colors.scss
+++ b/packages/ui/styles/constants/_colors.scss
@@ -28,6 +28,8 @@ $colorText: #041a3b !default;
 $colorTextSecondary: #707482 !default;
 $colorTextSubdued: #69707d !default;
 
+$colorOverlayBackground: #f2f5f9 !default;
+
 $colorAccessibilityOutline: #9648bd !default;
 
 $colorShadow: rgba(53, 61, 73, 0.2) !default;
