Add missing large size for Icons

--- a/packages/ui/src/Icon.module.scss
+++ b/packages/ui/src/Icon.module.scss
@@ -13,6 +13,10 @@
     width: c.$iconSizeNormal;
     height: c.$iconSizeNormal;
   }
+  .large {
+    width: c.$iconSizeLarge;
+    height: c.$iconSizeLarge;
+  }
   .xlarge {
     width: c.$iconSizeXLarge;
     height: c.$iconSizeXLarge;
