--- a/packages/ui/src/IconButton.module.scss
+++ b/packages/ui/src/IconButton.module.scss
@@ -13,7 +13,9 @@
 
   &.paddingNormal {
     // With icon size "normal" matches text input
+    /* doiuse-disable calc */
     padding: calc(#{c.$grid * 2} - #{c.$borderWidth});
+    /* doiuse-enable calc */
   }
 
   .body {
