--- a/packages/ui/src/SelectField.module.scss
+++ b/packages/ui/src/SelectField.module.scss
@@ -115,11 +115,15 @@ $select: ':global .hz-select-field__control';
   }
 
   .multiValue {
-    background-color: c.$colorNeutralWhite !important;
+    background-color: c.$colorNeutralWhite;
     border: c.$borderWidth solid c.$colorNeutralLight;
     border-radius: c.$borderRadius;
     height: c.$grid * 5.5; // makes 22px; design is 21px.
     overflow: hidden;
+  }
+
+  :global .hz-select-field__multi-value--is-disabled {
+    background-color: c.$colorNeutral;
   }
 
   // Styles for MultiValue chips - focused state.
