--- a/packages/ui/src/InteractiveList.module.scss
+++ b/packages/ui/src/InteractiveList.module.scss
@@ -24,9 +24,9 @@ ul.list {
   padding: 0;
   margin: 0;
 
-  li {
+  .content {
     padding: c.$grid c.$grid * 3;
-    margin: c.$grid * 3 0;
+    margin-top: c.$grid * 3;
     border: c.$borderWidth solid c.$colorNeutralLight;
     border-radius: c.$borderRadius;
     display: flex;
