--- a/packages/ui/src/Overlay.module.scss
+++ b/packages/ui/src/Overlay.module.scss
@@ -47,7 +47,7 @@
       max-width: c.$overlayContentMaxWidth;
     }
     .fullscreen {
-      max-width: 100;
+      max-width: 100%;
     }
 
     .header {
