Hide body scroll when Overlay is open

--- a/packages/ui/src/Overlay.module.scss
+++ b/packages/ui/src/Overlay.module.scss
@@ -1,6 +1,10 @@
 @use '../styles/constants' as c;
 @use '../styles/helpers' as h;
 
+.overlayed {
+  overflow: hidden;
+}
+
 .portal {
   width: 100vw;
   height: 100vh;
