--- a/packages/ui/src/Overlay.module.scss
+++ b/packages/ui/src/Overlay.module.scss
@@ -1,6 +1,10 @@
 @use '../styles/constants' as c;
 @use '../styles/helpers' as h;
 
+.overlayed {
+  overflow: hidden;
+}
+
 .portal {
   width: 100vw;
   height: 100vh;
@@ -35,12 +39,20 @@
 
   .wrapper {
     width: 100%;
-    max-width: c.$overlayContentMaxWidth;
     margin-left: auto;
     margin-right: auto;
-    padding-left: c.$grid * 5;
-    padding-right: c.$grid * 5;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    max-height: 100%;
+
+    &.normal {
+      max-width: c.$overlayContentMaxWidth;
+    }
+    .fullscreen {
+      max-width: 100%;
+    }
 
     .header {
       display: flex;
@@ -68,6 +80,11 @@
       .title {
         margin: 0;
       }
+    }
+
+    .content {
+      flex: 1 1 auto;
+      overflow: auto;
     }
   }
 }
