change remove btn color.

--- a/packages/ui/src/SelectField.module.scss
+++ b/packages/ui/src/SelectField.module.scss
@@ -161,7 +161,7 @@ $select: ':global .hz-select-field__control';
       background-color: c.$colorNeutral;
     }
     .multiValueRemove {
-      color: c.$colorNeutralLight;
+      color: c.$colorTextSecondary;
     }
   }
 }
