hotfix multiselect disabled state chip color (#212)
* fix color disabled state

* add loki image

* modify remove button color too

* change remove btn color.

* update ref img

Co-authored-by: Andrey Goncharov <andrey@goncharov.page>

--- a/packages/ui/src/SelectField.module.scss
+++ b/packages/ui/src/SelectField.module.scss
@@ -115,7 +115,7 @@ $select: ':global .hz-select-field__control';
   }
 
   .multiValue {
-    background-color: c.$colorNeutralWhite !important;
+    background-color: c.$colorNeutralWhite;
     border: c.$borderWidth solid c.$colorNeutralLight;
     border-radius: c.$borderRadius;
     height: c.$grid * 5.5; // makes 22px; design is 21px.
@@ -153,6 +153,15 @@ $select: ':global .hz-select-field__control';
     &:hover {
       background-color: c.$colorNeutral;
       border-color: c.$colorNeutralLight;
+    }
+  }
+
+  &.disabled {
+    :global .hz-select-field__multi-value--is-disabled {
+      background-color: c.$colorNeutral;
+    }
+    .multiValueRemove {
+      color: c.$colorTextSecondary;
     }
   }
 }
