feat: add inset outline option

--- a/packages/ui/src/Button.module.scss
+++ b/packages/ui/src/Button.module.scss
@@ -31,6 +31,11 @@
     visibility: hidden;
 
     @include h.outlineSimple;
+
+    &.inset {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   &:focus,
