update(datepicker): remove react-datepicker from peer deps

--- a/packages/ui/.storybook/preview.scss
+++ b/packages/ui/.storybook/preview.scss
@@ -1,5 +1,6 @@
 @use '../styles/fonts';
 @use '../styles/constants' as c;
+@use '../styles/datepicker/datepicker.module';
 
 $screenMinWidth: 1280px;
 
