--- a/packages/ui/src/SelectField.module.scss
+++ b/packages/ui/src/SelectField.module.scss
@@ -244,6 +244,7 @@ $select: ':global .hz-select-field__control';
     padding-bottom: 2 * c.$grid;
     background-color: c.$colorNeutralWhite;
     color: c.$colorTextSecondary;
+    font-size: c.$fontSizeBodySmaller;
     text-transform: inherit;
   }
 }
