--- a/packages/ui/src/SelectField.module.scss
+++ b/packages/ui/src/SelectField.module.scss
@@ -22,7 +22,7 @@ $select: ':global .hz-select-field__control';
   }
 
   .chevron {
-    transition: 0;
+    transition: 0s;
     color: c.$colorPrimary;
     margin-left: $selectHorizontalPadding;
   }
@@ -69,7 +69,7 @@ $select: ':global .hz-select-field__control';
     }
 
     .chevron {
-      transition: 0;
+      transition: 0s;
       color: c.$colorTextSecondary;
     }
   }
@@ -231,5 +231,21 @@ $select: ':global .hz-select-field__control';
         color: c.$colorPrimary;
       }
     }
+  }
+
+  :global .hz-select-field__group {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  :global .hz-select-field__group-heading {
+    margin-bottom: 0;
+    padding-top: 2 * c.$grid;
+    padding-bottom: 2 * c.$grid;
+    background-color: c.$colorNeutralWhite;
+    color: c.$colorTextSecondary;
+    font-size: c.$fontSizeBodySmaller;
+    font-weight: c.$fontWeightTextBold;
+    text-transform: inherit;
   }
 }
