--- a/packages/ui/styles/constants/_sizes.scss
+++ b/packages/ui/styles/constants/_sizes.scss
@@ -40,6 +40,7 @@ $buttonMaxWidth: 370px !default;
 $toastMaxWidth: 580px !default;
 
 $inputHeight: $grid * 10 !default;
+$inputHeightSmall: $grid * 7.5 !default;
 
 $cardShadowSize: 1px !default;
 $cardShadowBlur: 4px !default;
