feat: add smallMedium icon size

--- a/packages/ui/styles/constants/_sizes.scss
+++ b/packages/ui/styles/constants/_sizes.scss
@@ -27,7 +27,8 @@ $iconStrokeWidth: 1.5px !default;
 $iconStrokeWidthBold: 3px !default;
 
 $iconSizeSmall: $grid * 4 !default;
-$iconSizeNormal: $grid * 6 !default;
+$iconSizeSmallMedium: $grid * 5 !default;
+$iconSizeMedium: $grid * 6 !default;
 $iconSizeLarge: $grid * 10 !default;
 $iconSizeXLarge: $grid * 12 !default;
 
