--- a/packages/ui/src/Icon.module.scss
+++ b/packages/ui/src/Icon.module.scss
@@ -9,9 +9,13 @@
     width: c.$iconSizeSmall;
     height: c.$iconSizeSmall;
   }
-  .normal {
-    width: c.$iconSizeNormal;
-    height: c.$iconSizeNormal;
+  .smallMedium {
+    width: c.$iconSizeSmallMedium;
+    height: c.$iconSizeSmallMedium;
+  }
+  .medium {
+    width: c.$iconSizeMedium;
+    height: c.$iconSizeMedium;
   }
   .large {
     width: c.$iconSizeLarge;
