--- a/packages/ui/src/Loader.module.scss
+++ b/packages/ui/src/Loader.module.scss
@@ -11,9 +11,13 @@ $opacityMin: 0.2;
     width: c.$iconSizeSmall;
     height: c.$iconSizeSmall;
   }
-  &.normal {
-    width: c.$iconSizeNormal;
-    height: c.$iconSizeNormal;
+  &.smallMedium {
+    width: c.$iconSizeSmallMedium;
+    height: c.$iconSizeSmallMedium;
+  }
+  &.medium {
+    width: c.$iconSizeMedium;
+    height: c.$iconSizeMedium;
   }
   &.large {
     width: c.$iconSizeLarge;
