--- a/packages/ui/src/Pagination.module.scss
+++ b/packages/ui/src/Pagination.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
 
   > *:not(:last-child) {
-    margin-right: c.$grid * 6;
+    margin-right: c.$grid * 4.5;
   }
 
   .rows {
@@ -84,19 +84,15 @@
     }
   }
 
-  .pageJump {
+  .pageJumpForm {
     display: flex;
     align-items: center;
 
-    .label {
-      margin-right: c.$grid * 2.5;
-    }
-
     .inputContainer {
-      margin-top: 0;
-      // Comfortable to use with up to 5-digit numbers and small enough to not take much space
-      max-width: c.$grid * 26;
-      min-width: c.$grid * 26;
+      // Comfortable to use with up to 4-digit numbers and small enough to not take much space
+      // max-width: c.$grid * 14;
+      // min-width: c.$grid * 14;
+      width: c.$grid * 14;
     }
   }
 
@@ -105,14 +101,13 @@
     align-items: center;
 
     .label {
-      margin-right: c.$grid * 2.5;
+      margin-right: c.$grid * 2;
+      margin-bottom: 0;
     }
 
     :global .hz-select-field__control {
-      margin-top: 0;
       // Comfortable to use with up to 4-digit numbers and small enough to not take much space
-      max-width: c.$grid * 25;
-      min-width: c.$grid * 25;
+      width: c.$grid * 22;
     }
   }
 }
