feat: add size prop to Button, refactor Button stories

--- a/packages/ui/__stories__/Button.stories.module.scss
+++ b/packages/ui/__stories__/Button.stories.module.scss
@@ -1,5 +1,8 @@
-@use '../styles/constants' as c;
+.button {
+  margin-right: 10px;
+}
 
-.long {
-  width: c.$buttonMaxWidth;
+.block {
+  display: block;
+  margin-bottom: 10px;
 }
