--- a/packages/ui/styles/constants/_sizes.scss
+++ b/packages/ui/styles/constants/_sizes.scss
@@ -8,6 +8,7 @@ $grid: 0.25rem !default;
 $alertWidth: 350px !default;
 
 $borderRadius: $grid * 1.25 !default;
+$borderRadiusButtonSmall: $grid * 3.75 !default;
 
 $borderRadiusToast: 37px !default;
 
