--- a/packages/ui/__stories__/utils.scss
+++ b/packages/ui/__stories__/utils.scss
@@ -29,13 +29,14 @@
   margin-bottom: c.$grid * 3;
 }
 
-.calendarWrapper {
-  width: 100%;
-  height: 400px;
-}
-
 .column {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
   align-items: flex-start;
 }
