--- a/packages/ui/src/Calendar/Calendar.module.scss
+++ b/packages/ui/src/Calendar/Calendar.module.scss
@@ -140,7 +140,7 @@ $inputPadding: c.$grid * 3;
     }
   }
 
-  max-width: $inputMaxWidth;
+  width: $inputMaxWidth;
   min-width: $inputMinWidth;
 
   &.time {
