fix: use small trailing icon if TextField is small

--- a/packages/ui/src/TextField.module.scss
+++ b/packages/ui/src/TextField.module.scss
@@ -111,6 +111,10 @@ $marginLeftWithIcon: c.$grid * 5;
     .inputContainer {
       height: c.$inputHeightSmall;
     }
+
+    .inputIconTrailing {
+      right: 0;
+    }
   }
 
   &.mockAutofill {
