Fix Table issues * Pass Table initialState property into useTable hook * Add classNames to main Table section (wrapper, header, content and footer) * SelectField menuPlacement default value is set to 'auto'

--- a/packages/ui/__stories__/utils.scss
+++ b/packages/ui/__stories__/utils.scss
@@ -40,3 +40,27 @@
   flex-direction: row;
   align-items: flex-start;
 }
+
+.customTableFooter {
+  [role="cell"] {
+    font-style: italic;
+  }
+}
+
+.customTableContent {
+  [role="row"]:nth-child(odd) {
+    [role="cell"] {
+      background: #ccc;
+    }
+  }
+}
+
+.customTableHeader {
+  [role="columnheader"] {
+    background: lightblue;
+
+    span {
+      color: #000;
+    }
+  }
+}
