--- a/packages/ui/src/CodeEditor.module.scss
+++ b/packages/ui/src/CodeEditor.module.scss
@@ -3,9 +3,12 @@
 
 .container {
   box-shadow: 0 c.$cardShadowSize c.$cardShadowBlur 0 c.$colorShadow;
+  border-radius: c.$borderRadius;
   :global .cm-wrap {
     // bogus padding to avoid overlapping with our outlineFormField mixin.
     padding: 1px;
+    border-radius: c.$borderRadius;
+    border: c.$borderWidth solid c.$colorNeutralLight;
   }
   :global .cm-wrap.cm-focused {
     // inherited outline just looks weird, override it
@@ -13,5 +16,14 @@
 
     // use our own outline
     @include h.outlineFormField;
+
+    border: c.$borderWidth solid c.$colorAccessibilityOutline;
   }
+  :global .cm-scroller {
+    border-radius: c.$borderRadius;
+  }
+}
+
+.errorContainer {
+  margin-top: c.$grid;
 }
