fix: use small font in label for small sized inputs

--- a/packages/ui/src/Select/SelectField.module.scss
+++ b/packages/ui/src/Select/SelectField.module.scss
@@ -19,6 +19,10 @@ $selectGroupHeading: ':global .hz-select-field__group-heading';
   .label {
     display: block;
     margin-bottom: c.$grid;
+
+    &.small {
+      @include c.typographyBodySmall;
+    }
   }
 
   .errorContainer {
