feat: update Table according to design

--- a/packages/ui/src/Pagination.module.scss
+++ b/packages/ui/src/Pagination.module.scss
@@ -3,7 +3,7 @@
 
 .container {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
 
   > *:not(:last-child) {
