--- a/packages/ui/src/Table/Table.module.scss
+++ b/packages/ui/src/Table/Table.module.scss
@@ -5,10 +5,14 @@
   overflow-x: auto;
 
   &.margin {
-    margin-bottom: c.$grid * 3;
+    margin-bottom: c.$grid * 2;
   }
 
   .table {
     flex-grow: 1;
+  }
+
+  .empty {
+    margin-top: c.$grid * 8;
   }
 }
