--- a/packages/ui/src/Table/Cell.module.scss
+++ b/packages/ui/src/Table/Cell.module.scss
@@ -1,15 +1,17 @@
 @use '../../styles/constants' as c;
+@use '../../styles/helpers' as h;
 
 .td {
   position: relative;
   display: flex;
   align-items: center;
-  padding-top: c.$grid * 2.5;
-  padding-bottom: c.$grid * 2.5;
-  padding-right: c.$grid * 3;
-  padding-left: c.$grid * 3;
+  height: c.$grid * 7.5;
+  padding-right: c.$grid * 5;
+  padding-left: c.$grid * 5;
   color: c.$colorText;
+
   @include c.typographyBodySmall;
+  @include h.overflowEllipsis;
 
   &.alignLeft {
     justify-content: flex-start;
@@ -21,6 +23,10 @@
 
   &.alignCenter {
     justify-content: center;
+  }
+
+  &:not(:last-of-type) {
+    border-right: c.$borderWidth solid c.$colorNeutral;
   }
 }
 
