--- a/packages/ui/src/Table/Row.module.scss
+++ b/packages/ui/src/Table/Row.module.scss
@@ -2,19 +2,12 @@
 @use '../../styles/helpers' as h;
 
 @mixin rowBase {
-  border-bottom: c.$borderWidth solid c.$colorNeutralWhite;
-
-  > *:not(:last-child) {
-    border-right: c.$borderWidth solid c.$colorNeutralWhite;
-  }
+  background-color: c.$colorNeutralLighter;
+  margin-bottom: c.$grid * 1.25;
 }
 
 .row {
   @include rowBase;
-
-  &:hover {
-    background-color: c.$colorNeutralLighter;
-  }
 
   &.clickable {
     cursor: pointer;
@@ -58,5 +51,5 @@
 }
 
 .headerRow {
-  @include rowBase;
+  margin-bottom: c.$grid * 1.25;
 }
