--- a/packages/ui/src/Link.module.scss
+++ b/packages/ui/src/Link.module.scss
@@ -1,4 +1,5 @@
 @use '../styles/constants' as c;
+@use '../styles/helpers' as h;
 
 @mixin link {
   display: inline-flex;
@@ -17,6 +18,11 @@
   &.active {
     text-decoration: underline solid;
     outline: transparent solid c.$outlineWidth;
+  }
+
+  &:focus,
+  &.focus {
+    @include h.outlineSimple;
   }
 
   &.primary {
